# time_for_salat

./: Cargo.toml  README.md  build.sh
prayer_times/: Cargo.toml
prayer_times/src/: lib.rs
src/: log.html  main.rs
