workspace = { members = ["prayer_times"] }
[package]
name = "time_for_salat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prayer_times = { path = "prayer_times" }
chrono = "0.4.26"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
